[package]
name = "format2tex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
format_struct = { path = "../format_struct" }
serde_json = "1.0.87"
serde = {version = "*", features = ["derive"]}
regex = "*"
colored = "*"